[package]
name = "praborrow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives for PraBorrow. Implements Sovereign<T> for distributed ownership enforcement."
keywords = ["distributed", "ownership", "memory-safety", "systems"]
categories = ["concurrency", "memory-management", "network-programming"]

[features]
default = ["std"]
std = ["serde/std", "tracing/std"]

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
tracing = { version = "0.1", default-features = false }
thiserror = { version = "2.0.17", default-features = false }

