[package]
name = "praborrow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives for PraBorrow. Implements Sovereign<T> for distributed ownership enforcement."
keywords = ["distributed", "ownership", "memory-safety", "systems"]
categories = ["concurrency", "memory-management", "network-programming"]

[features]
default = ["std"]
std = []

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
